# skivvy

./: .gitignore  Dockerfile  Dockerfile.ci  Dockerfile.examples  LICENSE  MANIFEST.in  README.md  README_intro_v2.md  bump_version.py  codecov.yml  justfile  modal_runner.py  package-lock.json  pyproject.toml  setup.py
.github/workflows/: docker-build.yml  docker-image.yml  on-push.yml  on-release.yml  playground-modal.yml  playground-pages.yml  release.yml  tests.yml
docs/: matchers.md  prototype-blinker-events.md  prototype-diffing.md  settings.md
examples/: all.json  config.json  default.json  dev_server  dummy.json  failing.json  passing.json
examples/dev_server/: README.md  cfg.json  cfg_diffs.json
examples/dummyjson/: 01_product_search_phone.json  02_single_product.json  dummy.json
examples/dummyjson/tests/: 02_single_product.json  (+1 more)
examples/failure/: 2_fail_multiple_diffs_demo.json  3_failing_status.json
examples/more_advanced/: 4_inline_python_exp.json
examples/typicode/: all.json  default.json  failing.json  failing_raw_diff.json  failing_table.json  failing_unified.json  failing_unified_table.json  passing.json  timing.json
examples/yet_more_tests/: 00_smoke_homepage.json  02_get_post_1.json  03_capture_user_id.json  04_posts_by_captured_user.json  05_user_subset.json  06_create_post.json  99_fail_diff_demo.json
playground/: README.md  local_runner.py  modal_runner.py  runner_core.py
playground/web/: .env.development  .env.example  index.html  package-lock.json  package.json
playground/workspace/: README.md  cfg_diffs.json
scripts/: compare_failure_diffs.py  generate_docs.py
skivvy/: LICENSE.txt  custom_matchers.py  matchers.py  setup.py  skivvy.py  skivvy_config.py  verify.py
skivvy/cfg/: example.json
skivvy/skivvy/: requirements.txt  verify.py
skivvy/util/: __init__.py  dict_util.py  dir_storage.py  file_util.py  http_util.py  log_util.py  str_util.py
src/skivvy/: __init__.py  __main__.py  brace_expansion.py  config.py  custom_matchers.py  errors.py  events.py  matchers.py  path_tracker.py  sinks.py  skivvy.py  skivvy_config2.py  test_runner.py  verify.py
tests/: conftest.py  test_array_matchers.py  test_brace_expansion.py  test_create_request.py  test_custom_matchers.py  test_dict_util.py  test_docs_generation.py  test_event_diff_prototype.py  test_events_runtime.py  test_examples.py  test_file_util.py  test_http_util.py  test_http_util2.py  test_matcher_registry.py  test_matchers.py  test_numeric_matchers.py  test_overrides.py  test_path_tracker.py  test_run_test.py  test_scope.py  test_stateful_matchers.py  test_test_runner.py  test_util.py  test_valid_url_matcher.py
tools/: vulture_whitelist.py
(+136 files in other folders)
