[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[project]
name = "skivvy"
version = "0.517"
description = "A simple tool for testing JSON/HTTP APIs"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Jonas Holmer", email = "jonas.holmer@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python"
]
dependencies = [
    "pyopenssl",
    "requests",
    "docopt-ng"
]

[project.urls]
Homepage = "https://github.com/hyrfilm/skivvy"

[project.scripts]
skivvy = "skivvy:skivvy.run_skivvy"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
